objects/ccpt__Agenda_Item__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Meeting_Actions__c</fullName>
        <description>This number represents the total number of action items against an agenda item.</description>
        <inlineHelpText>This number represents the total number of action items against an agenda item.</inlineHelpText>
        <label>Meeting Actions</label>
        <summaryForeignKey>ccpt__Meeting_Action__c.ccpt__Agenda_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>ccpt__Meeting__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__Position__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpt__RelatedTo__c</fullName>
        <externalId>true</externalId>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__isPublic__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether the Agenda Item is available for all meeting attendees.</inlineHelpText>
        <label>isPublic</label>
        <type>Checkbox</type>
    </fields>
    <label>Agenda Item</label>
    <listViews>
        <fullName>ccpt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>